--- a/mainPage.css
+++ b/mainPage.css
@@ -1,7 +1,29 @@
 body {
+
     background-image: url("backgroundImg.png");
-    width: 256px;
-    height: 256px;
     background-repeat: repeat;
-    color: white;
+    color: black;
+}
+#title {
+    font-family: Quicksand, sans-serif;
+
+    float: none;
+    margin-top: 30px;
+    background-color: white;
+    color: black;
+    border: 3px solid black;
+    border-radius: 15px;
+    text-align: right;
+    align-items: center;
+    overflow: auto;
+
+}
+#titleDesc {
+    padding: 1% 0;
+}
+#profilePic {
+    border-radius: 50%;
+    width: 20%;
+    padding: 2em;
+    float: right;
 }
